Added nbody.clj-12.12, written by Johannes Friestad.  It uses Clojure 1.2's deftype to represent the masses, which speeds things up enormously over my previous approaches.